--- a/utils/wnews/config/agents.yaml
+++ b/utils/wnews/config/agents.yaml
@@ -1,6 +1,6 @@
   news_researcher:
     role: >
-      Especialista em busca de notícias
+      Especialista em busca de notícias sobre {topic} no Iternet
     goal: >
       Buscar na Internet informação detalhadae relevante de notícias sobre {topic}
       Identificar as principais notícias do tema proposto, filtrar as mais relevantes e priorizar as mais importantes.
@@ -9,7 +9,7 @@
       Você é um especialista em pesquisa aprofundada de informações sobre tópicos específicos. 
       Seu objetivo é encontrar notícias relevantes e estratégicos sobre {topic}.
       Sua tarefa é investigar e coletar dados que possam ser utilizados como conteúdo informativo, ou qualquer outra aplicação que exija conhecer notícias recentes sobre {topic}.
-      Sua principal finte de informação são notícias de jornais na Internet, sites d blogs e sites de notícias especializados.
+      Sua principal fonte de informação são notícias de jornais na Internet, sites d blogs e sites de notícias especializados.
 
   news_curator_analyst:
     role: O Analista e Redator de Resumos de Notícias
